--- a/index.html
+++ b/index.html
@@ -19,30 +19,58 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="soduku-solver" class="anchor" href="#soduku-solver" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Soduku-solver</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>its a c++ source code for soduku matrix 6x6 solver which accepts digit from 1 to 6. 
+it is a source code for built a program which is able to solve soduku matrix of 6x6.the soduku puzzle is given by user and solution is given by our program.
+<strong>Linux Users :</strong>
+Steps of Using Soduku Solver(linux binary):</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>STEP 1</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p></p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<p>STEP 2</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p></p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<p>STEP 1</p>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p></p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<p><strong>Window users:</strong>
+Rules to handle (window) program:
+user will give a soduku for solving contains digit from 1 to 6.
+the empty space in soduku is represented by 0;
+example of 6x6 soduku problem is :</p>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<pre><code>2   0   1   6   3   4
+0   4   6   2   5   0   
+1   2   5   0   6   3
+4   6   3   5   0   2   
+0   1   4   0   2   6
+6   3   2   1   0   5
+</code></pre>
+
+<p>where 0 represents blank space in soduku.</p>
+
+<p>INSTRUCTION FOR USING SODUKU-SOLVER FOR 6X6 MATRIX</p>
+
+<p>STEP 1</p>
+
+<p></p>
+
+<p>STEP 2</p>
+
+<p></p>
+
+<h1>
+<a id="download-instruction" class="anchor" href="#download-instruction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Download Instruction</h1>
+
+<p>Download executable file from bin directory.</p>
+
+<p>Thank you!!</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/girishkuniyal/soduku-solver">Soduku-solver</a> is maintained by <a href="https://github.com/girishkuniyal">girishkuniyal</a>.</span>
