Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@ Steps of Using Soduku Solver(linux binary):</p>
 
 <p>STEP 1</p>
 
-<p></p>
+<p><img src="https://raw.githubusercontent.com/girishkuniyal/soduku-solver/master/screenshot/soduku1.png" alt="soduku"></p>
 
 <p>STEP 2</p>
 
-<p></p>
+<p><img src="https://raw.githubusercontent.com/girishkuniyal/soduku-solver/master/screenshot/soduku2.png" alt="soduku"></p>
 
 <p>STEP 1</p>
 
-<p></p>
+<p><img src="https://raw.githubusercontent.com/girishkuniyal/soduku-solver/master/screenshot/soduku3.png" alt="soduku"></p>
 
 <p><strong>Window users:</strong>
 Rules to handle (window) program:
@@ -59,11 +59,11 @@ example of 6x6 soduku problem is :</p>
 
 <p>STEP 1</p>
 
-<p></p>
+<p><img src="http://github.com/girishkuniyal/soduku-solver/blob/master/screenshot/step1.png" alt="Soduku Screenshot"></p>
 
 <p>STEP 2</p>
 
-<p></p>
+<p><img src="http://github.com/girishkuniyal/soduku-solver/blob/master/screenshot/step2.png" alt="Soduku Screenshot"></p>
 
 <h1>
 <a id="download-instruction" class="anchor" href="#download-instruction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Download Instruction</h1>
