Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1>
 <a id="soduku-solver" class="anchor" href="#soduku-solver" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Soduku-solver</h1>
 
-<p>its a c++ source code for soduku matrix 6x6 solver which accepts digit from 1 to 6. 
+<p>It is a C++ source code for soduku matrix 6x6 solver which accepts digit from 1 to 6. 
 it is a source code for built a program which is able to solve soduku matrix of 6x6.the soduku puzzle is given by user and solution is given by our program.
 <strong>Linux Users :</strong>
 Steps of Using Soduku Solver(linux binary):</p>
@@ -38,32 +38,6 @@ Steps of Using Soduku Solver(linux binary):</p>
 <p>STEP 1</p>
 
 <p><img src="https://raw.githubusercontent.com/girishkuniyal/soduku-solver/master/screenshot/soduku3.png" alt="soduku"></p>
-
-<p><strong>Window users:</strong>
-Rules to handle (window) program:
-user will give a soduku for solving contains digit from 1 to 6.
-the empty space in soduku is represented by 0;
-example of 6x6 soduku problem is :</p>
-
-<pre><code>2   0   1   6   3   4
-0   4   6   2   5   0   
-1   2   5   0   6   3
-4   6   3   5   0   2   
-0   1   4   0   2   6
-6   3   2   1   0   5
-</code></pre>
-
-<p>where 0 represents blank space in soduku.</p>
-
-<p>INSTRUCTION FOR USING SODUKU-SOLVER FOR 6X6 MATRIX</p>
-
-<p>STEP 1</p>
-
-<p><img src="http://github.com/girishkuniyal/soduku-solver/blob/master/screenshot/step1.png" alt="Soduku Screenshot"></p>
-
-<p>STEP 2</p>
-
-<p><img src="http://github.com/girishkuniyal/soduku-solver/blob/master/screenshot/step2.png" alt="Soduku Screenshot"></p>
 
 <h1>
 <a id="download-instruction" class="anchor" href="#download-instruction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Download Instruction</h1>
