Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,27 +22,63 @@
       <h1>
 <a id="soduku-solver" class="anchor" href="#soduku-solver" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Soduku-solver</h1>
 
-<p>It is a C++ source code for soduku matrix 6x6 solver which accepts digit from 1 to 6. 
-it is a source code for built a program which is able to solve soduku matrix of 6x6.the soduku puzzle is given by user and solution is given by our program.
-<strong>Linux Users :</strong>
-Steps of Using Soduku Solver(linux binary):</p>
+<p>its a c++ source code for soduku matrix 6x6 solver which accepts digit from 1 to 6. 
+it is a source code for built a program which is able to solve soduku matrix of 6x6.the soduku puzzle is given by user and solution is given by our program.</p>
+
+<h1>
+<a id="how-to-run-and-contribute" class="anchor" href="#how-to-run-and-contribute" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to Run and Contribute</h1>
+
+<p>Now our main focus is to provide GUI version of our program so Qt Creater is used by our project.Open qt project/Soduku-Sovler in Qt creater and start developing.</p>
+
+<p>1) Contribution in creating binary for Window and create window Qt project. I want GUI in window also.(Because this qt project GUI is for linux version only).</p>
+
+<h1>
+<a id="steps-of-using-soduku-solverlinux-user-with-qt-createrlibrary-only" class="anchor" href="#steps-of-using-soduku-solverlinux-user-with-qt-createrlibrary-only" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Steps of Using Soduku Solver(Linux user with Qt creater/library only):</h1>
 
 <p>STEP 1</p>
 
-<p><img src="https://raw.githubusercontent.com/girishkuniyal/soduku-solver/master/screenshot/soduku1.png" alt="soduku"></p>
+<p><img src="https://github.com/girishkuniyal/soduku-solver/blob/master/screenshot/soduku1.png" alt="alt tag"></p>
 
 <p>STEP 2</p>
 
-<p><img src="https://raw.githubusercontent.com/girishkuniyal/soduku-solver/master/screenshot/soduku2.png" alt="soduku"></p>
+<p><img src="https://github.com/girishkuniyal/soduku-solver/blob/master/screenshot/soduku2.png" alt="alt tag"></p>
 
 <p>STEP 1</p>
 
-<p><img src="https://raw.githubusercontent.com/girishkuniyal/soduku-solver/master/screenshot/soduku3.png" alt="soduku"></p>
+<p><img src="https://github.com/girishkuniyal/soduku-solver/blob/master/screenshot/soduku3.png" alt="alt tag"></p>
+
+<h1>
+<a id="step-for-using-solver-windows-user" class="anchor" href="#step-for-using-solver-windows-user" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Step for using solver (Windows user):</h1>
+
+<p>user will give a soduku for solving contains digit from 1 to 6.
+the empty space in soduku is represented by 0;
+example of 6x6 soduku problem is :</p>
+
+<pre><code>2   0   1   6   3   4
+0   4   6   2   5   0   
+1   2   5   0   6   3
+4   6   3   5   0   2   
+0   1   4   0   2   6
+6   3   2   1   0   5
+</code></pre>
+
+<p>where 0 represents blank space in soduku.</p>
+
+<p>INSTRUCTION FOR USING SODUKU-SOLVER FOR 6X6 MATRIX</p>
+
+<p>STEP 1</p>
+
+<p><img src="https://github.com/girishkuniyal/soduku-solver/blob/master/screenshot/step1.png" alt="alt tag"></p>
+
+<p>STEP 2</p>
+
+<p><img src="https://github.com/girishkuniyal/soduku-solver/blob/master/screenshot/step2.png" alt="alt tag"></p>
 
 <h1>
 <a id="download-instruction" class="anchor" href="#download-instruction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Download Instruction</h1>
 
-<p>Download executable file from bin directory.</p>
+<p>Download executable(.exe) file from bin directory. or 
+<a href="https://sourceforge.net/projects/soduku-solver/?source=directory">Download from Sourceforge</a></p>
 
 <p>Thank you!!</p>
 
