Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <h1>
 <a id="soduku-solver" class="anchor" href="#soduku-solver" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Soduku-solver</h1>
 
-<p>its a c++ source code for soduku matrix 6x6 solver which accepts digit from 1 to 6. 
-it is a source code for built a program which is able to solve soduku matrix of 6x6.the soduku puzzle is given by user and solution is given by our program.</p>
+<p>It is a c++ source code for soduku matrix 6x6 solver which accepts digit from 1 to 6. 
+it is a source code for built a program which is able to solve soduku matrix of 6x6 of Easy and Medium Level.the soduku puzzle is given by user and solution is given by our program.</p>
 
 <h1>
 <a id="how-to-run-and-contribute" class="anchor" href="#how-to-run-and-contribute" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to Run and Contribute</h1>
