Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ it is a source code for built a program which is able to solve soduku matrix of 
 
 <p>STEP 1</p>
 
-<p><img src="https://github.com/girishkuniyal/soduku-solver/blob/master/screenshot/soduku1.png" alt="alt tag"></p>
+<p><img src="https://github.com/girishkuniyal/soduku-solver/blob/master/screenshot/soduku1.png" alt="Image"></p>
 
 <p>STEP 2</p>
 
