Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@ it is a source code for built a program which is able to solve soduku matrix of 
 
 <p>STEP 1</p>
 
-<p><img src="https://github.com/girishkuniyal/soduku-solver/blob/master/screenshot/soduku1.png" alt="Image"></p>
+<p><img src="https://raw.githubusercontent.com/girishkuniyal/soduku-solver/master/screenshot/soduku1.png" alt="Image"></p>
 
 <p>STEP 2</p>
 
-<p><img src="https://github.com/girishkuniyal/soduku-solver/blob/master/screenshot/soduku2.png" alt="alt tag"></p>
+<p><img src="https://raw.githubusercontent.com/girishkuniyal/soduku-solver/master/screenshot/soduku2.png" alt="alt tag"></p>
 
-<p>STEP 1</p>
+<p>STEP 3</p>
 
-<p><img src="https://github.com/girishkuniyal/soduku-solver/blob/master/screenshot/soduku3.png" alt="alt tag"></p>
+<p><img src="https://raw.githubusercontent.com/girishkuniyal/soduku-solver/master/screenshot/soduku3.png" alt="alt tag"></p>
 
 <h1>
 <a id="step-for-using-solver-windows-user" class="anchor" href="#step-for-using-solver-windows-user" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Step for using solver (Windows user):</h1>
@@ -68,11 +68,11 @@ example of 6x6 soduku problem is :</p>
 
 <p>STEP 1</p>
 
-<p><img src="https://github.com/girishkuniyal/soduku-solver/blob/master/screenshot/step1.png" alt="alt tag"></p>
+<p><img src="https://raw.githubusercontent.com/girishkuniyal/soduku-solver/master/screenshot/step1.png" alt="alt tag"></p>
 
 <p>STEP 2</p>
 
-<p><img src="https://github.com/girishkuniyal/soduku-solver/blob/master/screenshot/step2.png" alt="alt tag"></p>
+<p><img src="https://raw.githubusercontent.com/girishkuniyal/soduku-solver/master/screenshot/step2.png" alt="alt tag"></p>
 
 <h1>
 <a id="download-instruction" class="anchor" href="#download-instruction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Download Instruction</h1>
