--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section class="main-content">
       <h1>
-<a id="sudoku-solver" class="anchor" href="#sudoku-solver" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Sudoku-solver</h1>
+<a id="soduku-solver" class="anchor" href="#soduku-solver" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Soduku-solver</h1>
 
 <p>its a c++ source code for soduku matrix 6x6 solver which accepts digit from 1 to 6. 
 it is a source code for built a program which is able to solve soduku matrix of 6x6.the soduku puzzle is given by user and solution is given by our program.</p>
@@ -33,26 +33,26 @@ it is a source code for built a program which is able to solve soduku matrix of 
 <p>1) Contribution in creating binary for Window and create window Qt project. I want GUI in window also.(Because this qt project GUI is for linux version only).</p>
 
 <h1>
-<a id="steps-of-using-sudoku-solver" class="anchor" href="#steps-of-using-sudoku-solver" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Steps of Using Sudoku Solver:</h1>
+<a id="steps-of-using-soduku-solver" class="anchor" href="#steps-of-using-soduku-solver" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Steps of Using Soduku Solver:</h1>
 
 <p>STEP 1</p>
 
-<p><img src="https://raw.githubusercontent.com/girishkuniyal/sudoku-solver/master/screenshot/soduku1.png" alt="Image"></p>
+<p><img src="https://raw.githubusercontent.com/girishkuniyal/Soduku-solver/master/screenshot/soduku1.png" alt="alt tag"></p>
 
 <p>STEP 2</p>
 
-<p><img src="https://raw.githubusercontent.com/girishkuniyal/sudoku-solver/master/screenshot/soduku2.png" alt="alt tag"></p>
+<p><img src="https://raw.githubusercontent.com/girishkuniyal/Soduku-solver/master/screenshot/soduku2.png" alt="alt tag"></p>
 
 <p>STEP 3</p>
 
-<p><img src="https://raw.githubusercontent.com/girishkuniyal/sudoku-solver/master/screenshot/soduku3.png" alt="alt tag"></p>
+<p><img src="https://raw.githubusercontent.com/girishkuniyal/Soduku-solver/master/screenshot/soduku3.png" alt="alt tag"></p>
 
 <h1>
 <a id="download-instruction" class="anchor" href="#download-instruction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Download Instruction</h1>
 
-<p>Download Sudoku solver from sourceforge or <a href="https://sourceforge.net/projects/soduku-solver/?source=directory">Click here</a></p>
+<p>Download from Sourceforge or <a href="https://sourceforge.net/projects/soduku-solver/?source=directory">Click here</a></p>
 
-<p>Thank you</p>
+<p>Thank you!!</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/girishkuniyal/Soduku-solver">Sudoku-solver</a> is maintained by <a href="https://github.com/girishkuniyal">girishkuniyal</a>.</span>
