--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Soduku-solver</h1>
-      <h2 class="project-tagline">Code in C++  for sudoku matrix solver of 6x6 size. </h2>
+      <h2 class="project-tagline">Code in C++  for soduku matrix solver of 6x6 size. </h2>
       <a href="https://github.com/girishkuniyal/Soduku-solver" class="btn">View on GitHub</a>
       <a href="https://github.com/girishkuniyal/Soduku-solver/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/girishkuniyal/Soduku-solver/tarball/master" class="btn">Download .tar.gz</a>
